force-app/main/default/objects/AH_UDC_PropertyAccount__c/AH_UDC_PropertyAccount__c.object-meta.xml
<CustomObject>
    <description>Captures central data for UDC.</description>
    <label>UDC Property Account</label>
    <nameField>
        <displayFormat>UDCProperty-{0000}</displayFormat>
        <label>UDCPropertyAccount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UDC Property Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>