force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/Abandonment__c.field-meta.xml
<CustomField>
    <fullName>Abandonment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Abandonment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>