force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the account that will be attached to this UDCPropertyAccount</description>
    <inlineHelpText>This is the account that will be attached to this UDCPropertyAccount</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>UDC Property Accounts</relationshipLabel>
    <relationshipName>UDC_Property_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>