force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/AdditionalTranslatedLanguages__c.field-meta.xml
<CustomField>
    <fullName>AdditionalTranslatedLanguages__c</fullName>
    <description>What other languages will the property use in business operations?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What other languages will the property use in business operations?</inlineHelpText>
    <label>Additional Translated Languages</label>
    <length>100</length>
    <type>Text</type>
</CustomField>