force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>AddressLine2__c</fullName>
    <description>This is the second line of the street address of the property if needed.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the second line of the street address of the property if needed.</inlineHelpText>
    <label>Address Line 2</label>
    <length>45</length>
    <type>Text</type>
</CustomField>