force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/AirportName2__c.field-meta.xml
<CustomField>
    <fullName>AirportName2__c</fullName>
    <description>This is the property&apos;s second closest airport&apos;s name.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the property&apos;s second closest airport&apos;s name.</inlineHelpText>
    <label>Airport Name - 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>