force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/CancellationTime__c.field-meta.xml
<CustomField>
    <fullName>CancellationTime__c</fullName>
    <description>The property&apos;s Cancellation time.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The property&apos;s Cancellation time.</inlineHelpText>
    <label>Cancellation Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>