force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/CheckOutTime__c.field-meta.xml
<CustomField>
    <fullName>CheckOutTime__c</fullName>
    <description>The property&apos;s Checkout Time</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The property&apos;s Checkout Time</inlineHelpText>
    <label>Check Out Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>