force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>This is the property&apos;s city.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the property&apos;s city.</inlineHelpText>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>