force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>This is the property&apos;s country.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the property&apos;s country.</inlineHelpText>
    <label>Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>