force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/CRS__c.field-meta.xml
<CustomField>
    <fullName>CRS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CRS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>