force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/DaylightSavingsTimeObserved__c.field-meta.xml
<CustomField>
    <fullName>DaylightSavingsTimeObserved__c</fullName>
    <description>Does the property&apos;s time zone observe daylight savings time?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Does the property&apos;s time zone observe daylight savings time?</inlineHelpText>
    <label>Daylight Savings Time Observed?</label>
    <length>10</length>
    <type>Text</type>
</CustomField>