force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/DirectionfromAirporttoProperty2__c.field-meta.xml
<CustomField>
    <fullName>DirectionfromAirporttoProperty2__c</fullName>
    <description>This is the direction from the airport (i.e. Southeast).</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the direction from the airport (i.e. Southeast).</inlineHelpText>
    <label>Direction from Airport to Property - 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>