force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/DistancetoNearestAirport1__c.field-meta.xml
<CustomField>
    <fullName>DistancetoNearestAirport1__c</fullName>
    <description>This is the distance in either km or miles from the nearest airport.</description>
    <inlineHelpText>This is the distance in either km or miles from the nearest airport.</inlineHelpText>
    <label>Distance to Nearest Airport - 1</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>