force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/EmailIndividualReservations__c.field-meta.xml
<CustomField>
    <fullName>EmailIndividualReservations__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email - Individual Reservations</label>
    <length>100</length>
    <type>Text</type>
</CustomField>