force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/EmailMarketing__c.field-meta.xml
<CustomField>
    <fullName>EmailMarketing__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Marketing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>