force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/EnhancementsUpgrade__c.field-meta.xml
<CustomField>
    <fullName>EnhancementsUpgrade__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enhancements/Upgrade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>