force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/Facebook__c.field-meta.xml
<CustomField>
    <fullName>Facebook__c</fullName>
    <description>The property&apos;s Facebook link.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The property&apos;s Facebook link.</inlineHelpText>
    <label>Facebook</label>
    <length>100</length>
    <type>Text</type>
</CustomField>