force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <description>This is the property&apos;s main fax number.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the property&apos;s main fax number.</inlineHelpText>
    <label>Fax</label>
    <length>30</length>
    <type>Text</type>
</CustomField>