force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/GDS__c.field-meta.xml
<CustomField>
    <fullName>GDS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GDS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>