force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/Instagram__c.field-meta.xml
<CustomField>
    <fullName>Instagram__c</fullName>
    <description>The property&apos;s Instagram link.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The property&apos;s Instagram link.</inlineHelpText>
    <label>Instagram</label>
    <length>100</length>
    <type>Text</type>
</CustomField>