force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/IsPropertyAllInclusive__c.field-meta.xml
<CustomField>
    <fullName>IsPropertyAllInclusive__c</fullName>
    <description>Does the property have all inclusive pricing?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Does the property have all inclusive pricing?</inlineHelpText>
    <label>Is Property All-Inclusive?</label>
    <length>10</length>
    <type>Text</type>
</CustomField>