force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/LargestMeetingRoomSize__c.field-meta.xml
<CustomField>
    <fullName>LargestMeetingRoomSize__c</fullName>
    <label>Largest Meeting Room Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>