force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/ListSafetyMeasures__c.field-meta.xml
<CustomField>
    <fullName>ListSafetyMeasures__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>List Safety Measures</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>