force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <description>This is the Property&apos;s Locale / Culture info</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the Property&apos;s Locale / Culture info</inlineHelpText>
    <label>Locale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>