force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/MaxRoomsBookingEngine__c.field-meta.xml
<CustomField>
    <fullName>MaxRoomsBookingEngine__c</fullName>
    <label>Max Rooms per Booking (Booking Engine)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>