force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/MaxRoomsCallCenter__c.field-meta.xml
<CustomField>
    <fullName>MaxRoomsCallCenter__c</fullName>
    <label>Max Rooms per Booking (Call Center)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>