force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/MobileStarRating__c.field-meta.xml
<CustomField>
    <fullName>MobileStarRating__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mobile Star Rating</label>
    <length>50</length>
    <type>Text</type>
</CustomField>