force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/NameofPropertyManagementSystemPMS__c.field-meta.xml
<CustomField>
    <fullName>NameofPropertyManagementSystemPMS__c</fullName>
    <description>What property management system does the property use?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What property management system does the property use?</inlineHelpText>
    <label>Name of Property Management System (PMS)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>