force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/NearestAirportCode1__c.field-meta.xml
<CustomField>
    <fullName>NearestAirportCode1__c</fullName>
    <description>This is the property&apos;s closest airport&apos;s code.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the property&apos;s closest airport&apos;s code.</inlineHelpText>
    <label>Nearest Airport Code - 1</label>
    <length>3</length>
    <type>Text</type>
</CustomField>