force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/NumberofNonSmokingRooms__c.field-meta.xml
<CustomField>
    <fullName>NumberofNonSmokingRooms__c</fullName>
    <description>Total number of smoking guestrooms at the property.</description>
    <inlineHelpText>Total number of smoking guestrooms at the property.</inlineHelpText>
    <label>Number of Non-Smoking Rooms</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>