force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/NumberofRoomTypes__c.field-meta.xml
<CustomField>
    <fullName>NumberofRoomTypes__c</fullName>
    <label>Number of Room Types</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>