force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/OwnershipAffiliation__c.field-meta.xml
<CustomField>
    <fullName>OwnershipAffiliation__c</fullName>
    <description>This is the property&apos;s owner.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the property&apos;s owner.</inlineHelpText>
    <label>Ownership Affiliation</label>
    <length>60</length>
    <type>Text</type>
</CustomField>