force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/PetsAllowed__c.field-meta.xml
<CustomField>
    <fullName>PetsAllowed__c</fullName>
    <description>Are pets allowed at the property?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Are pets allowed at the property?</inlineHelpText>
    <label>Pets Allowed?</label>
    <length>10</length>
    <type>Text</type>
</CustomField>