force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>This is the property&apos;s main phone number.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the property&apos;s main phone number.</inlineHelpText>
    <label>Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>