force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/PhoneGroupReservations__c.field-meta.xml
<CustomField>
    <fullName>PhoneGroupReservations__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone – Group Reservations</label>
    <length>30</length>
    <type>Text</type>
</CustomField>