force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/PMS__c.field-meta.xml
<CustomField>
    <fullName>PMS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PMS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>