force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <description>This is the property&apos;s postal code.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the property&apos;s postal code.</inlineHelpText>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>