force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/PrimaryPropertyType__c.field-meta.xml
<CustomField>
    <fullName>PrimaryPropertyType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Property Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>