force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/PropertyAbbreviation__c.field-meta.xml
<CustomField>
    <fullName>PropertyAbbreviation__c</fullName>
    <description>This is the property abbreviation it may be the same as the PMS Code, but it could be different.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the property abbreviation it may be the same as the PMS Code, but it could be different.</inlineHelpText>
    <label>Property Abbreviation</label>
    <length>24</length>
    <type>Text</type>
</CustomField>