force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/PropertyDescrption__c.field-meta.xml
<CustomField>
    <fullName>PropertyDescrption__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Property Descrption</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>