force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/PropertyEmail__c.field-meta.xml
<CustomField>
    <fullName>PropertyEmail__c</fullName>
    <description>This is the property&apos;s main email address.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the property&apos;s main email address.</inlineHelpText>
    <label>Property Email</label>
    <length>30</length>
    <type>Text</type>
</CustomField>