force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/PropertyLogo__c.field-meta.xml
<CustomField>
    <fullName>PropertyLogo__c</fullName>
    <description>The property&apos;s official logo.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The property&apos;s official logo.</inlineHelpText>
    <label>Property Logo</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>