force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/PropertyName__c.field-meta.xml
<CustomField>
    <fullName>PropertyName__c</fullName>
    <description>This is the long version of the property name.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the long version of the property name.</inlineHelpText>
    <label>Property Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>