force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/PropertyNameAlternateLanguage__c.field-meta.xml
<CustomField>
    <fullName>PropertyNameAlternateLanguage__c</fullName>
    <description>This is the property name in an alternate language (i.e. Chinese Simplified)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the property name in an alternate language (i.e. Chinese Simplified)</inlineHelpText>
    <label>Property Name Alternate Language</label>
    <length>50</length>
    <type>Text</type>
</CustomField>