force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/PublicHealthSafetyMeasures__c.field-meta.xml
<CustomField>
    <fullName>PublicHealthSafetyMeasures__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Should be blank or Yes</inlineHelpText>
    <label>Public Health Safety Measures</label>
    <length>10</length>
    <type>Text</type>
</CustomField>