force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/RACStarRating__c.field-meta.xml
<CustomField>
    <fullName>RACStarRating__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RAC Star Rating</label>
    <length>50</length>
    <type>Text</type>
</CustomField>