force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/ReportingDataWarehouse__c.field-meta.xml
<CustomField>
    <fullName>ReportingDataWarehouse__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reporting/Data Warehouse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>