force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/RevenueManagementSystem__c.field-meta.xml
<CustomField>
    <fullName>RevenueManagementSystem__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Revenue Management System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>