force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/SecurityCode__c.field-meta.xml
<CustomField>
    <fullName>SecurityCode__c</fullName>
    <description>This is a unique double GUID code that is used by the Form Assembly Salesforce Connector to find and update the Property Account.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>This is a unique double GUID code that is used by the Form Assembly Salesforce Connector to find and update the Property Account.</inlineHelpText>
    <label>Security Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>