force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/SmallestSeatingCapacity__c.field-meta.xml
<CustomField>
    <fullName>SmallestSeatingCapacity__c</fullName>
    <label>Smallest Seating Capacity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>