force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/StarRanking__c.field-meta.xml
<CustomField>
    <fullName>StarRanking__c</fullName>
    <description>What is the property&apos;s star ranking?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the property&apos;s star ranking?</inlineHelpText>
    <label>Star Ranking</label>
    <length>100</length>
    <type>Text</type>
</CustomField>