force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/TimeZone__c.field-meta.xml
<CustomField>
    <fullName>TimeZone__c</fullName>
    <description>This is the property&apos;s time zone.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the property&apos;s time zone.</inlineHelpText>
    <label>TimeZone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>