force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/TotalFloors__c.field-meta.xml
<CustomField>
    <fullName>TotalFloors__c</fullName>
    <label>Total # of Floors</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>