force-app/main/default/objects/AH_UDC_PropertyAccount__c/fields/TotalGuestrooms__c.field-meta.xml
<CustomField>
    <fullName>TotalGuestrooms__c</fullName>
    <description>Total number of guestrooms at the property.</description>
    <inlineHelpText>Total number of guestrooms at the property.</inlineHelpText>
    <label>Total Guestrooms</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>